--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,6 +85,7 @@ margin-bottom: 32px;
     gap: 24px;
     background-color: #fff;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .gallery-item {
